PlayerCombat: Add support for ability targeting

--- a/Assembly-CSharp.csproj
+++ b/Assembly-CSharp.csproj
@@ -111,7 +111,11 @@
     <Compile Include="Assets\Scripts\Units\Enemies\HostileGolem\HostileGolemAI.cs" />
     <Compile Include="Assets\Scripts\Units\Enemies\HostileGolem\HostileGolemAttackHitbox.cs" />
     <Compile Include="Assets\Scripts\Units\Enemies\HostileGolem\HostileGolemDeath.cs" />
+    <Compile Include="Assets\Scripts\Units\Player\Combat\Abilities\PlayerBasicAttack.cs" />
+    <Compile Include="Assets\Scripts\Units\Player\Combat\AbilityTargetType.cs" />
+    <Compile Include="Assets\Scripts\Units\Player\Combat\PlayerAbility.cs" />
     <Compile Include="Assets\Scripts\Units\Player\Combat\PlayerCombat.cs" />
+    <Compile Include="Assets\Scripts\Units\Player\Combat\QueuedPlayerAbility.cs" />
     <Compile Include="Assets\Scripts\Units\Player\Movement\CharacterControllerExtension.cs" />
     <Compile Include="Assets\Scripts\Units\Player\Movement\PlayerLightFollow.cs" />
     <Compile Include="Assets\Scripts\Units\Player\Movement\PlayerMovement.cs" />
