LightningAgent: Add and use object pooling system

--- a/.gitignore
+++ b/.gitignore
@@ -6,3 +6,6 @@ Temp/
 Assembly-CSharp-Editor.csproj
 Assembly-CSharp-firstpass.csproj
 Assembly-CSharp.csproj
+Assembly-CSharp.csproj.DotSettings
+SpiritOfNight.sln.DotSettings.user
+
